# RustContest202411

.atomgit/result/: check_result.json
exercises/solution1/src/: count_distinct.rs  tests.rs
exercises/solution2/: Cargo.toml
exercises/solution2/src/: converter.rs  tests.rs
exercises/solution3/src/: calc_logic.rs  tests.rs
exercises/solution4/src/: rec_mc.rs  tests.rs
exercises/solution5/src/: fibnacci.rs  tests.rs
topic1/solutiont1/src/: conjecture.rs
topic1/solutiont10/: Cargo.toml
topic1/solutiont10/src/: zuc_encryption.rs
topic1/solutiont10/src/zuc_encryption/: bit_31.rs  data.rs  zuc.rs
topic1/solutiont11/: Cargo.toml
topic1/solutiont11/src/: allocator.rs  freelist.rs  heap.rs  lib.rs  main.rs  metadata.rs  os.rs
topic1/solutiont11/tests/: basic.rs  os_interface.rs  thread.rs
topic1/solutiont2/src/: district.rs
topic1/solutiont3/: Cargo.toml  lunar_new_year_dates.json
topic1/solutiont3/src/: calc_time.rs  generate_lunar.rs  tests.rs
topic1/solutiont3/src/calc_time/: iso_date.rs  solar_date.rs
topic1/solutiont4/: Cargo.toml  phrases.json  pinyin.json  tone.json  wade_giles.json
topic1/solutiont4/src/: wade_giles_romanization.rs
topic1/solutiont5/: Cargo.toml  rules.json
topic1/solutiont5/src/: retirement.rs
topic1/solutiont6/: STPhrases.txt
topic1/solutiont6/src/: main.rs  simple2traditional.rs
topic1/solutiont7/: Cargo.toml  data.json
topic1/solutiont7/src/: identity_card.rs
topic1/solutiont8/: Cargo.toml
topic1/solutiont8/src/: prime_factor.rs
topic1/solutiont9/src/: main.rs  spiral_prime.rs
(+17 files in other folders)
