[package]
name = "solutiont3"
version = "0.1.0"
edition = "2021"
default-run="main"

[dependencies]
chinese-lunisolar-calendar = "0.2"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


[[test]]
name = "tests"
path = "src/tests.rs"
[[bin]]
name = "lunar"
path = "src/generate_lunar.rs"
[[bin]]
name = "main"
path = "src/main.rs"
